--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -331,7 +331,7 @@
 
 	"+1 gold from worked water tiles in city":{
 		Italian:"+1 Oro per ogni risorsa anfibia sfruttata dalla città."
-		Simplified_Chinese:"所在城市每个水上地块+1金钱"
+		Simplified_Chinese:"所在城市每个工作的水上地块+1金钱"
 		French:"+1 or pour les cases maritimes exploitées par la ville"
 		Polish:"+1 do złota z obsadzonych pól wodnych w tym mieście"
 		Russian:"+1 Золото от обрабатываемых водных клеток вокруг города"
@@ -566,7 +566,7 @@
 		Italian:"+15% Produzione per le unità a cavallo"
 		German:"+15% Produktion beim Ausbilden von berittenen Einheiten in dieser Stadt"
 		French:"+15% Production lorsqu'une unité montée est produite dans cette ville"
-		Simplified_Chinese:"组建骑乘单位时产能积累速率+15%"
+		Simplified_Chinese:"所在城市组建骑乘单位时产能积累速率+15%"
 		Polish:"+15% do produkcji jednostek kawalerii w tym mieście"
 		Russian:"+15% Производство при постройке конных юнитов в данном городе"
 		Czech:"+15% produkce při výstavbě jízdních jednotek v tomto městě"
@@ -709,7 +709,7 @@
 
 	"'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu":{
 		Italian:"'Trattate i soldati come figli, e vi seguiranno nelle valli più profonde; considerateli la vostra amata progenie, e resteranno accanto a voi fino alla morte.' - Sun Tzu"
-		Simplified_Chinese:"“视卒如婴儿，故可以与之赴深溪；视卒如爱子，故可与之俱死。”——孙子"
+		Simplified_Chinese:"“视卒如婴儿，故可与之赴深溪；视卒如爱子，故可与之俱死。”——孙子"
 		Polish:"'Traktuj swoich żołnierzy jak ukochane dzieci, a z chęcią zginą wraz z Tobą.' - Sun Tzu"
 		German:"'Behandle Deine Soldaten als seien sie Deine Kinder und sie werden Dir in die tiefsten Täler folgen; betrachte sie als Deine geliebten Söhne und sie werden an Deiner Seite stehen, sogar bis zum Tode.' -Sun Tzu"
 		Czech:"'Považujte své vojáky za své děti a budou vás následovat do nejhlubších údolí; podívej se na ně jako na své milované syny, a ti budou za vámi stát až do smrti.' - Sun Tzu"
@@ -744,7 +744,7 @@
 		Italian:"Concede 1 copia aggiuntiva di ogni risorsa di lusso migliorata vicino alla città"
 		Romanian:"Oferă o copie în plus pentru fiecare resursă de lux din apropierea acestui oraș"
 		Spanish:"Proporciona una copia extra de los recursos de lujo de la ciudad"
-		Simplified_Chinese:"所在城市每处已开发的奢侈资源额外增加1处"
+		Simplified_Chinese:"所在城市每处已开发的奢侈资源额外增加1份"
 		German:"Gibt 1 extra Einheit jeder verbesserten Luxusresource in der Nähe dieser Stadt"
 		French:"Produit un exemplaire supplémentaire de chaque ressources de luxe à côté de cette ville"
 		Polish:"Każdy luksusowy surowiec w granicach miasta jest liczony podwójnie"
@@ -826,7 +826,7 @@
 		German:"+33% erhöhte Wahrscheinlichkeit für die Geburt Großer Persönlichkeiten"
 		Dutch:"+33% Geweldig persoon generatie in alle steden"
 		Spanish:"+33% generación de Grandes Personas en todas las ciudades"
-		Simplified_Chinese:"+33%所有城市伟人点数积累"
+		Simplified_Chinese:"所有城市伟人点数积累速率+33%"
 		Portuguese:"+33% de geração de grandes pessoas em todas as cidades"
 		Polish:"+33% do produkcji Wielkich Ludzi we wszystkich miastach"
 		Czech:"+33% produkce Velkých Osobností ve všech městech"
@@ -966,7 +966,7 @@
 		French:"Forge"
 		Romanian:"Forjă"
 		Spanish:"Forja"
-		Simplified_Chinese:"煅造场"
+		Simplified_Chinese:"锻造场"
 		Portuguese:"Forja"
 		German:"Schmiede"
 		Polish:"Kuźnia"
@@ -991,7 +991,7 @@
 		Italian:"+1 Produzione per ogni risorsa marittima sfruttata"
 		French:"+1 de production pour toutes les ressources maritimes exploitées par la ville"
 		Romanian:"+1 producție din toate resursele maritime prelucrate de oraș"
-		Simplified_Chinese:"所在城市每个海洋资源+1产能"
+		Simplified_Chinese:"所在城市每个已开发的海洋资源+1产能"
 		Portuguese:"1+ de produção de todos os recursos marítimos trabalhados pelo cidade"
 		German:"+1 Produktion von allen Meer Ressourcen die von dieser Stadt bewirtschaftet werden"
 		Polish:"+1 do produkcji za każdy wydobywany surowiec morski"
@@ -1004,7 +1004,7 @@
 		Italian:"Consente le rotte commerciali marittime"
 		French:"Connecter des routes commerciales maritimes"
 		Romanian:"Leagă rute comerciale pe apă"
-		Simplified_Chinese:"通过水路连接贸易路线"
+		Simplified_Chinese:"通过水路建立贸易路线"
 		Portuguese:"Conecta rotas comerciais pela água"
 		German:"Verbindet Handelsrouten über Wasser"
 		Polish:"Tworzy wodne szlaki handlowe"
@@ -1137,7 +1137,7 @@
 		German:"Kosten um neue Felder zu kaufen ist um 25% verringert"
 		Dutch:"Kosten voor het kopen van nieuwe velden verlaagt met 25%"
 		Spanish:"El coste de adquirir nuevas casillas se reduce 25%"
-		Simplified_Chinese:"购买新地块花费降低25%"
+		Simplified_Chinese:"购买新地块花费-25%"
 		Portuguese:"Custa de comprar novos terrenos reduzido em 25%"
 		Polish:"Koszt zakupu nowych pól obniżony o 25%"
 		Czech:"Cena za nákup nového území města se sníží o 25%"
@@ -1182,7 +1182,7 @@
 		French:"Atelier métallurgique"
 		Romanian:"Fierărie"
 		Spanish:"Herrería"
-		Simplified_Chinese:"大铁厂"
+		Simplified_Chinese:"钢铁厂"
 		Portuguese:"Siderurgia"
 		German:"Eisenhüttenwerk"
 		Polish:"Huta"
@@ -1555,7 +1555,7 @@
 		Italian:"+1 Produzione e Oro da ogni risorsa marittima sfruttata dalla città"
 		French:"+1 de production et d'or pour toutes les ressources maritimes exploitées par la ville"
 		Romanian:"+1 producție și aur din toate resursele maritime prelucrate de oraș"
-		Simplified_Chinese:"所在城市每个海洋资源+1产能和金钱"
+		Simplified_Chinese:"所在城市每个已开发的海洋资源+1产能和金钱"
 		Portuguese:"'+1 de produção e ouro de todos os recursos navais trabalhados pela cidade"
 		German:"+1 Produktion und Gold von allen Meeresressourcen die von der Stadt bewirtschaftet werden"
 		Polish:"+1 do produkcji i złota ze wszystkich surowców morskich wydobywanych w mieście"
@@ -1568,7 +1568,7 @@
 		Italian:"+15% Produzione per le unità marittime"
 		French:"+15% à la production d'unités maritimes"
 		Romanian:"+15% producție de unități navale"
-		Simplified_Chinese:"组建海上单位时+15%产能积累"
+		Simplified_Chinese:"组建海上单位时产能积累速率+15%"
 		Portuguese:"15% na produção de unidades marítimas"
 		German:"+15% Produktion für Marineeinheiten"
 		Polish:"+15% do produkcji jednostek marynarki"
@@ -1660,7 +1660,7 @@
 
 	"-15% to purchasing items in cities":{
 		Italian:"-15% costi in Oro per l'acquisto di unità ed edifici nelle Città"
-		Simplified_Chinese:"所有城市购买建造项目所需的金钱花费-15%"
+		Simplified_Chinese:"所有城市购买项目所需的金钱花费-15%"
 		French:"-15% d'or pour les achats dans les villes"
 		Polish:"-15% do ceny budynków i jednostek kupowanych w miastach"
 		Russian:"-15% к стоимости покупки в городах"
@@ -1721,7 +1721,7 @@
 
 	"Defensive buildings in all cities are 25% more effective":{
 		Italian:"+25% efficacia delle strutture difensive in tutte le città"
-		Simplified_Chinese:"所有城市防御建筑建造速度+25%"
+		Simplified_Chinese:"所有城市防御建筑防御力+25%"
 		French:"Les batiments de défense sont 25% plus efficace dans toutes les villes"
 		Polish:"+25% skuteczności budowli obronnych w miastach"
 		Russian:"Защитные сооружения во всех городах на 25% эффективнее"
@@ -2051,7 +2051,7 @@
 		French:"Chantier spatial"
 		Romanian:"Fabrică de nave spațiale"
 		Spanish:"Fábrica de Nave Espacial"
-		Simplified_Chinese:"太空船工厂"
+		Simplified_Chinese:"太空飞船工厂"
 		Portuguese:"Fábrica de Naves Espaciais"
 		German:"Raumschiff-Fabrik"
 		Polish:"Fabryka statków kosmicznych"
@@ -2066,7 +2066,7 @@
 		German:"Erhöht die Produktion von Raumschiffteilen um 50%"
 		Dutch:"Verhoogd de productiesnelheid van ruimteschips onderdelen met 50%"
 		Spanish:"Incrementa la producción de partes de Nave Espacial 50%"
-		Simplified_Chinese:"建造太空船部件时+50%产能"
+		Simplified_Chinese:"建造太空飞船部件时产能积累速率+50%"
 		Portuguese:"Torna a construção de partes de nave em 50%"
 		Polish:"Zwiększa produkcję części statku kosmicznego o 50%"
 		Czech:"Zvyšuje produkci částí vesmírných lodí o 50%"
@@ -2080,7 +2080,7 @@
 		German:"Raumschiffteil"
 		Dutch:"Ruimteschip onderdeel"
 		Spanish:"Parte de Nave Espacial"
-		Simplified_Chinese:"太空船的部件"
+		Simplified_Chinese:"太空飞船的部件"
 		Portuguese:"Parte de Nave Espacial"
 		Polish:"Część statku kosmicznego"
 		Czech:"Části kosmické lodi"
@@ -2116,7 +2116,7 @@
 		Italian:"+25% Produzione per le parti dell'astronave"
 		German:"Erhöht die Produktion von Raumschiffteilen um 25%"
 		French:"Améliore la production de pièces de vaisseau spatial de 25%"
-		Simplified_Chinese:"建造太空船部件时+25%产能"
+		Simplified_Chinese:"建造太空飞船部件时产能积累速率+25%"
 		Polish:"Zwiększa produkcję części statku kosmicznego o 25%"
 		Russian:"+25% Производство при постройке частей космического корабля"
 		Czech:"Zvyšuje produkci částí vesmírné lodi o 25%"
@@ -2220,7 +2220,7 @@
 
 	"Wonder is being built elsewhere":{
 		Italian:"Meraviglia in costruzione altrove"
-		Simplified_Chinese:"正在其他城市建造该奇观"
+		Simplified_Chinese:"其他城市正在建造该奇观"
         	French:"Cette merveille est déjà en construction ailleurs"
 		Portuguese:"A maravilha está sendo construida em uma cidade estrangeira"
 		Polish:"Cud jest już budowany gdzie indziej"
