--- a/android/assets/jsons/Translations/Policies.json
+++ b/android/assets/jsons/Translations/Policies.json
@@ -91,7 +91,7 @@
 		Russian:"+15% производства при создании чудес, +1 счастье за каждые 10 жителей в городе"
 		Romanian:"+15% producție la construcția de minuni, +1 fericire pentru fiecare 10 cetățeni ai unui oraș"
 		Spanish:"+15% producción al construir maravillas, +1 felicidad cada 10 habitantes in una ciudad"
-		Simplified_Chinese:"建造奇观时+15%产能积累，城市中每10市民+1快乐"
+		Simplified_Chinese:"建造奇观时产能积累速率+15%，城市中每10市民+1快乐"
 		Portuguese:"+15 de produção ao construir maravilhas, +1 felicidade a cada 10 em uma cidade"
 		German:"+15% Produktion beim Errichten von Wundern; +1 Zufriedenheit für jeden 10. Einwohner in einer Stadt"
 		French:"+15% production lors de la construction de merveilles, +1 de bonheur pour chaque tranche de 10 citoyens dans chaques villes"
@@ -152,7 +152,7 @@
 		Russian:"Землевладельческая Элита"
 		Romanian:"Elita terestră"
 		Spanish:"Élite terrateniente"
-		Simplified_Chinese:"绅缙阶层"
+		Simplified_Chinese:"缙绅阶层"
 		Portuguese:"Elite aterrisada"
 		German:"Landjunkerschaft" //according to: https://en.wikipedia.org/wiki/Landed_nobility
 		French:"Élite terrienne"
@@ -164,7 +164,7 @@
 		Russian:"+10% прироста еды и +2 еды в столице"
 		Romanian:"+10% creștere hrană și +2 hrană în capitală"
 		Spanish:"+10% crecimiento de comida y +2 comida en la capital"
-		Simplified_Chinese:"首都+10%食物积累速率，+2食物"
+		Simplified_Chinese:"首都食物积累速率+10%，+2食物"
 		Portuguese:"+10% adicionado ao crescimente de comida e +2 comida na capital"
 		German:"+10% Nahrungswachstum und +2 Nahrung in der Hauptstadt"
 		French:"Croissance +10% et Nourriture +2 dans la capitale"
@@ -212,7 +212,7 @@
 		Russian:"+15% роста и +2 еды во всех городах"
 		Romanian:"+15% creștere și +2 hrană în toate orașele"
 		Spanish:"+15% crecimiento y +2 comida en todas las ciudades"
-		Simplified_Chinese:"每座城市+15%食物积累速率，+2食物"
+		Simplified_Chinese:"每座城市食物积累速率+15%，+2食物"
 		Portuguese:"+15% crescimento e +2 de comida na capital"
 		German:"+15% Wachstum und +2 Nahrung in allen Städten"
 		French:"+15% de croissance et +2 nourriture dans toutes les villes"
@@ -262,7 +262,7 @@
 		Russian:"Увеличивает на 50% скорость создания поселенцев в столице. Также возле столицы бесплатно появляется посленец"
 		Romanian:"Antrenamentul colonizatorilor crescut +50% în capitală, se obține un colonizator nou lângă capitală"
 		Spanish:"Entrenamiento de colonos incrementado +50% en la capital y un colono gratis cerca de la capital"
-		Simplified_Chinese:"首都组建移民的速度提升50%，首都附近获得1个移民"
+		Simplified_Chinese:"首都组建移民速度+50%，首都附近获得1个移民"
 		Portuguese:"Treinamento em de colonos +50% mais rapido na capital, receba um novo colono próximo a capital"
 		German:"Ausbildung von Siedlern in der Hauptstadt ist um 50% erhöht; ein kostenloser Siedler erscheint in der Hauptstadt."
 		French:"La vitesse de formation des colons augmente de 50% dans la capital capitale et un colon gratuit apparaît à proximité"
@@ -310,7 +310,7 @@
 		Russian:"Увеличивает на 1% производство во всех городах и на 5% производство при строительстве зданий"
 		Romanian:"+1 construcție în fiecare oraș, +5% construcție clădiri"
 		Spanish:"+1 construcción en cada ciudad, +5% al construir edificios"
-		Simplified_Chinese:"每座城市+1产能，城市建造建筑时+5%产能积累"
+		Simplified_Chinese:"每座城市+1产能，城市建造建筑时产能积累速率+5%"
 		Portuguese:"+1 de produção em todas as cidades,+5% construção quando construindo edificios"
 		German:"+1 Produktion in jeder Stadt; +5% Produktion beim Bau von Gebäuden in Städten"
 		French:"production +1, et production +5% dans les villes lors de la construction de bâtiments"
@@ -407,7 +407,7 @@
 		Spanish:"+25% bonus al luchar contra Barbaros"
 		Italian:"+25% Forza contro i Barbari; ottieni Cultura quando uccidi unità barbariche"
 		Romanian:"+25% bonus contra Barbarilor"
-		Simplified_Chinese:"所有军事单位对蛮族的战斗力+25%，当杀死蛮族单位时可获得文化奖励"
+		Simplified_Chinese:"所有军事单位对蛮族的战斗力+25%，杀死蛮族单位时可获得文化奖励"
 		Portuguese:"+25% Força ao lutar contra Barbáros"
 		Russian:"+25% к силе атаки против варваров"
 		German:"+25% Bonus gegen Barbaren"
@@ -431,7 +431,7 @@
 		Spanish:"+20% a la produccion de unidades cuerpo a cuerpo "
 		Italian:"+20% Produzione per le unità da mischia"
 		Romanian:"+20% producție la antrenarea luptătorilor de contact"
-		Simplified_Chinese:"组建近战单位时+20%产能积累"
+		Simplified_Chinese:"组建近战单位时产能积累速率+20%"
 		Portuguese:"+20% Produção ao treinar unidades militares"
 		Russian:"+20% к производству при создании военных юнитов"
 		German:"+20% Produktion beim Rekrutieren von Nahkampfeinheiten"
@@ -503,7 +503,7 @@
 		Spanish:"Cada ciudad con una guarnicion gana 1 de felicidad y 2 de cultura"
 		Italian:"+1 Felicità e +2 Cultura per ogni città con una guarnigione"
 		Romanian:"Fiecare oraș cu o garnizoană crește fericirea cu 1 și cultura cu 2"
-		Simplified_Chinese:"每座有守军的城市+1快乐和+2文化"
+		Simplified_Chinese:"每座有驻军的城市+1快乐和+2文化"
 		Portuguese:"+1 felicidade e +2 cultara por cidade com guarda"
 		Russian:"Каждый город с гарнизоном увеличивает счастье на 1 и культуру на 2"
 		German:"Jede besatzte Stadt erhöht die Zufriedenheit um 1 und Kultur um 2"
@@ -614,7 +614,7 @@
 		Russian:"50% избытка счатья прибавляется к культуре для покупки общественных институтов"
 		Romanian:"50% din fericirea în exces adăugată la cultură pentru politici"
 		Spanish:"50% de exceso de felicidad añadido a la cultura para políticas"
-		Simplified_Chinese:"快乐为正时每2点快乐+1点文化"
+		Simplified_Chinese:"富余快乐的50%转化为文化"
 		Portuguese:"50% da felicidade em excesso sera adicionada para cultura para políticas"
 		German:"50% der überschüssigen Zufriedenheit wird zu Kultur für Sozialegrundsätze umgewandelt"
 		French:"50% du bonheur excédentaire est ajouté en Culture"
@@ -861,7 +861,7 @@
 		Russian:"-25% цены покупок в городах"
 		Romanian:"-25% la cumpărarea obiectelor în orașe"
 		Spanish:"-25% a la compra de ítems en ciudades"
-		Simplified_Chinese:"购买城市建造项目时的金钱花费-25%"
+		Simplified_Chinese:"购买城市项目时的金钱花费-25%"
 		Portuguese:"-25% a compra de itens em cidades"
 		German:"-25% Gold Kosten beim Kauf von Objekten in Städten"
 		French:"-25% de coût en or d'achat de batiments/unités dans les villes"
@@ -1079,7 +1079,7 @@
 		Russian:"+15% науки, когда империя счастлива"
 		Romanian:"+15% știință cât timp imperiul este fericit"
 		Spanish:"+15% ciencia mientras el imperio esté feliz"
-		Simplified_Chinese:"快乐为正时科研产出+15%"
+		Simplified_Chinese:"帝国处于快乐时科研产出+15%"
 		Portuguese:"+15% ciência enquanto império está feliz"
 		German:"+15% Wissenschaft solange das Reich zufrieden ist"
 		French:"+15% science tant que l'empire est heureux"
@@ -1201,7 +1201,7 @@
 		Russian:"+1 производство за каждые 5 единиц населения"
 		Romanian:"+1 producție la fiecare 5 cetățeni"
 		Spanish:"+1 producción por cada 5 habitantes"
-		Simplified_Chinese:"每5个人口+1产能"
+		Simplified_Chinese:"每5人口+1产能"
 		Portuguese:"+1 produção por cada 5 habitantes"
 		German:"+1 Produktion für jeden 5. Einwohner"
 		French:"+1 production par tranches de 5 habitants"
@@ -1225,7 +1225,7 @@
 		Russian:"-50% потребления еды специалистами"
 		Romanian:"-50% consum hrană de către specialiști"
 		Spanish:"-50% gasto de comida por especialistas"
-		Simplified_Chinese:"供养专业人员消耗的食物减半"
+		Simplified_Chinese:"专业人员消耗的食物减半"
 		Portuguese:"-50% gasto de comida por especialistas"
 		German:"-50% Nahrungsverbrauch durch Spezialisten"
 		French:"-50% consommation de nourriture des spécialistes"
