--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -19,7 +19,7 @@
 	"Could not load game from clipboard!":{
 		Italian:"Impossibile caricare partita dagli appunti!"
 		Romanian:"Jocul nu a putut fi încărcat din clipboard!"
-		Simplified_Chinese:"无法从剪贴板读取游戏!"
+		Simplified_Chinese:"无法从剪贴板中读取游戏!"
 		Portuguese:"Não foi possivel carregar o jogo da prancheta"
 		German:"Das Spiel konnte nicht aus der Zwischenablage geladen werden!"
 		French:"Impossible de charger la partie depuis le presse-papier"
@@ -462,7 +462,7 @@
 
 	"Invalid game ID!":{
 		Italian:"ID Partita non corretto"
-		Simplified_Chinese:"无效的游戏Id！"
+		Simplified_Chinese:"无效的游戏ID！"
 		Russian:"Некорректный ID игры!"
                 Korean:"잘못된 게임 ID 입니다!"
 		Czech:"Chybné ID hry"
@@ -589,7 +589,7 @@
 	// Starting Era, the Era names don't need to translate.
 	"Starting Era":{
 		Italian:"Epoca iniziale"
-		Simplified_Chinese:"开始时代"
+		Simplified_Chinese:"起始时代"
     		Korean:"시작 시대"
 		Czech:"Doba počátku hry"
 		Ukrainian:"Початкова епоха"
@@ -600,7 +600,7 @@
 	"It looks like we can't make a map with the parameters you requested!":{
 		Italian:"Sembra che i parametri da te impostati siano eccessivi per questa mappa!"
 		Russian:"Похоже, что мы не можем создать карту с нужными вам параметрами!"
-		Simplified_Chinese:"无法根据你的设置创建地图！"
+		Simplified_Chinese:"无法根据您的设置创建地图！"
                 Korean:"당신이 요청한 매개변수로 지도를 만들 수 없을 것 같습니다!"
 		Czech:"Vypadá to, že nelze vytvořit mapu dle vašeho zadání!"
 		Ukrainian:"Неможливо створити мапу з обраними параметрами!"
@@ -609,7 +609,7 @@
 	"Maybe you put too many players into too small a map?":{
 		Italian:"Forse hai inserito troppi giocatori o altri parametri?"
 		Russian:"Может, у вас слишком много игроков для такой небольшой карты?"
-		Simplified_Chinese:"或许你放置了太多玩家在如此小的地图上？"
+		Simplified_Chinese:"可能您在如此小的地图上放置了太多玩家？"
                 Korean:"너무 작은 지도에 너무 많은 플레이어를 넣었나요?"
 		Czech:"Nevložili jste příliš mnoho hráčů do moc malé mapy?"
 		Ukrainian:"Можливо забагато гравців на замаленьку мапу?"
@@ -634,7 +634,7 @@
 		German:"Gespeicherte Spiele"
 		Dutch:"Huidige spellen"
 		Spanish:"Partidas guardadas"
-		Simplified_Chinese:"保存当前游戏"
+		Simplified_Chinese:"当前存档"
 		Portuguese:"Partidas salvas"
                 Korean:"현재 게임 저장"
 		Czech:"Aktuálně uložené hry"
@@ -755,7 +755,7 @@
 }
 
 	"Are you sure you want to delete this map?":{
-		Simplified_Chinese:"你真想删除这张地图吗？"
+		Simplified_Chinese:"您真想删除这张地图吗？"
 		Italian:"Vuoi davvero cancellare questa mappa?"
 		Russian:"Вы уверены в удалении этой карты?"
                 Korean:"이 지도를 삭제하시겠습니까?"
@@ -784,6 +784,7 @@
 	"Map uploaded successfully!":{
 		Italian:"Mappa caricata con successo"
 		Czech:"Mapa úspěšně nahrána!"
+		Simplified_Chinese:"地图上传成功！"
 },
 
 
@@ -824,7 +825,7 @@
 	"Turns between autosaves":{
 		Italian:"Turni tra autosalvataggi"
 		French:"Tours avant sauvegarde automatique"
-		Simplified_Chinese:"自动存档/回合"
+		Simplified_Chinese:"自动存档相隔回合"
 		Portuguese:"Turnos entre autosaves"
 		Russian:"Кол-во ходов между автосохранениями"
                 Korean:"자동 저장 라운드"
@@ -835,7 +836,7 @@
 	"Sound effects volume":{
 		Italian:"Volume effetti"
 		French:"Volume sonore"
-		Simplified_Chinese:"声效大小"
+		Simplified_Chinese:"音效音量"
 		Russian:"Громкость звука"
                 Korean:"음향효과 음량"
 		Czech:"Hlasitost zvuků"
@@ -883,14 +884,14 @@
 
 	"Show resources and improvements":{
 		Italian:"Mostra risorse e miglioramenti"
-		Simplified_Chinese:"显示资源与地块设施"
+		Simplified_Chinese:"显示资源与设施"
 		Czech:"Zobrazit zdroje a vylepšení"
 		Ukrainian:"Показати ресурси і вдосконалення"
 }
 
 	"Check for idle units":{
 		Italian:"Controlla unità inutilizzate"
-		Simplified_Chinese:"回合结束前查看未行动单位"
+		Simplified_Chinese:"回合结束前查看闲置单位"
 		Portuguese:"Cheque por unidades sem ordens",
 		German: "Untätige Einheiten anzeigen bei Rundenende"
 		French:"Vérifier les unités inactives"
@@ -954,7 +955,7 @@
 
 	"Show pixel improvements":{
 		Italian:"Mostra miglioramenti pixel"
-		Simplified_Chinese:"显示像素地块设施"
+		Simplified_Chinese:"显示像素设施"
 }
 
 	"Fontset":{
